=== master

* Support Dataset#returning on SQLite 3.35+ (jeremyevans)

=== 5.46.0 (2021-07-01)

* Add unused_associations plugin, for determining which associations and association methods are not used (jeremyevans)

* Make nil :setter/:adder/:remover/:clearer association options not create related methods (jeremyevans)

=== 5.45.0 (2021-06-01)

* Fix handling of NULL values in boolean columns in the ODBC adapter (jeremyevans) (#1765)

* Add auto_validations_constraint_validations_presence_message plugin for auto_validations/constraint_validations presence message integration (jeremyevans)

* Support Dataset#with :materialized option on SQLite 3.35+ for [NOT] MATERIALIZED (jeremyevans)

* Use ALTER TABLE DROP COLUMN for dropping columns on SQLite 3.35+ (jeremyevans)

=== 5.44.0 (2021-05-01)

* Add concurrent_eager_loading plugin, for eager loading multiple associations concurrently using separate threads (jeremyevans)

* Support :weeks as a interval unit in the date_arithmetic extension (jeremyevans) (#1759)

* Raise an exception if an interval hash with an unsupported key is passed in the date_arithmetic extension (jeremyevans) (#1759)

* Support dropping non-composite unique constraints on SQLite (jeremyevans) (#1755)

=== 5.43.0 (2021-04-01)

* Add column_encryption plugin, for encrypting column values (jeremyevans)

=== 5.42.0 (2021-03-01)

* Make the ado timestamp conversion proc a normal conversion proc that can be overridden similar to other conversion procs (jeremyevans)

* Add :reject_nil option to the nested_attributes method, to ignore calls where nil is passed as the associated object data (jeremyevans)

* Add async_thread_pool plugin for easier async usage with model classes and support for async destroy, with_pk, and with_pk! methods (jeremyevans)

* Add async_thread_pool Database extension for executing queries asynchronously using a thread pool (jeremyevans)
